assets-amber hernoemd naar assets-header-footer #46

--- a/views/partials/foot.liquid
+++ b/views/partials/foot.liquid
@@ -2,9 +2,9 @@
     <div class="wrapper-footer">
         <section class="about-footer">
             <div class="wrapper-logo-footer">
-                <a class="logo" href="/"><img loading="lazy" src="/assets-amber/logo-avl.svg" width="150" height="50"
+                <a class="logo" href="/"><img loading="lazy" src="/assets-header-footer/logo-avl.svg" width="150" height="50"
                         alt="Back to homepage"></a>
-                <a class="logo" href="/"><img loading="lazy" src="/assets-amber/logo-kemenkes.avif" width="170"
+                <a class="logo" href="/"><img loading="lazy" src="/assets-header-footer/logo-kemenkes.avif" width="170"
                         height="70" alt="Back to homepage"></a>
             </div>
             <h6>Oncollaboration</h6>
@@ -26,10 +26,10 @@
         <section class="contact-footer">
             <h6>Contact information</h6>
             <ul>
-                <li><img src="/assets-amber/icon-map.svg" alt="">Indonesia & The Netherlands</li>
-                <li><a href="tel:020 512 9111"><img src="/assets-amber/icon-phone.svg" alt="">AVL: 020 512 9111 </a>
+                <li><img src="/assets-header-footer/icon-map.svg" alt="">Indonesia & The Netherlands</li>
+                <li><a href="tel:020 512 9111"><img src="/assets-header-footer/icon-phone.svg" alt="">AVL: 020 512 9111 </a>
                 </li>
-                <li><a href="tel:1500-567"><img src="/assets-amber/icon-phone.svg" alt="">Kemenkes: 1500-567</a></li>
+                <li><a href="tel:1500-567"><img src="/assets-header-footer/icon-phone.svg" alt="">Kemenkes: 1500-567</a></li>
             </ul>
         </section>
     </div>
