--- a/views/partials/head.liquid
+++ b/views/partials/head.liquid
@@ -15,8 +15,8 @@
 
 <header class="main-header">
 
-    <a class="logo-nav" href="/"><img src="/assets-amber/logo-avl.svg" width="150" height="50" alt="Back to homepage"></a>
-    <a class="logo-nav" href="/"><img src="/assets-amber/logo-kemenkes.avif" width="150" height="50" alt="Back to homepage"></a>
+    <a class="logo-nav" href="/"><img src="/assets-header-footer/logo-avl.svg" width="150" height="50" alt="Back to homepage"></a>
+    <a class="logo-nav" href="/"><img src="/assets-header-footer/logo-kemenkes.avif" width="150" height="50" alt="Back to homepage"></a>
 
     <nav class="menu">
         <ul class="menu-items">
@@ -66,9 +66,9 @@
     </nav>
 
     <nav class="nav-logo-mobile">
-        <a class="logo" href="/"><img src="/assets-amber/logo-avl.svg" width="150" height="50"
+        <a class="logo" href="/"><img src="/assets-header-footer/logo-avl.svg" width="150" height="50"
                 alt="Logo Antoni van Leeuwenhoek Ziekenhuis"></a>
-        <a class="logo" href="/"><img src="/assets-amber/logo-kemenkes.avif" width="150" height="50"
+        <a class="logo" href="/"><img src="/assets-header-footer/logo-kemenkes.avif" width="150" height="50"
                 alt="Logo Antoni van Leeuwenhoek Ziekenhuis"></a>
     </nav>
 
