Iconen in footer width en height meegegeven #46

--- a/views/partials/foot.liquid
+++ b/views/partials/foot.liquid
@@ -26,10 +26,10 @@
         <section class="contact-footer">
             <h6>Contact information</h6>
             <ul>
-                <li><img src="/assets-header-footer/icon-map.svg" alt="">Indonesia & The Netherlands</li>
-                <li><a href="tel:020 512 9111"><img src="/assets-header-footer/icon-phone.svg" alt="">AVL: 020 512 9111 </a>
+                <li><img src="/assets-header-footer/icon-map.svg" width="25" height="25" alt="">Indonesia & The Netherlands</li>
+                <li><a href="tel:020 512 9111"><img src="/assets-header-footer/icon-phone.svg" width="25" height="25" alt="">AVL: 020 512 9111 </a>
                 </li>
-                <li><a href="tel:1500-567"><img src="/assets-header-footer/icon-phone.svg" alt="">Kemenkes: 1500-567</a></li>
+                <li><a href="tel:1500-567"><img src="/assets-header-footer/icon-phone.svg" width="25" height="25" alt="">Kemenkes: 1500-567</a></li>
             </ul>
         </section>
     </div>
