Logo kemenkes gecompressed #46

--- a/public/styles/footer.css
+++ b/public/styles/footer.css
@@ -64,6 +64,10 @@ footer {
                 display: flex;
                 flex-wrap: wrap;
                 align-items: center;
+
+                img {
+                    width: auto;
+                }
             }
         }
 
