--- a/views/partials/foot.liquid
+++ b/views/partials/foot.liquid
@@ -4,7 +4,7 @@
             <div class="wrapper-logo-footer">
                 <a class="logo" href="/"><img loading="lazy" src="/assets-header-footer/logo-avl.svg" width="150" height="50"
                         alt="Back to homepage"></a>
-                <a class="logo" href="/"><img loading="lazy" src="/assets-header-footer/logo-kemenkes.avif" width="170"
+                <a class="logo" href="/"><img loading="lazy" src="/assets-header-footer/logo-kemenkes.png" width="50"
                         height="70" alt="Back to homepage"></a>
             </div>
             <h6>Oncollaboration</h6>
