--- a/views/partials/head.liquid
+++ b/views/partials/head.liquid
@@ -16,7 +16,7 @@
 <header class="main-header">
 
     <a class="logo-nav" href="/"><img src="/assets-header-footer/logo-avl.svg" width="150" height="50" alt="Back to homepage"></a>
-    <a class="logo-nav" href="/"><img src="/assets-header-footer/logo-kemenkes.avif" width="150" height="50" alt="Back to homepage"></a>
+    <a class="logo-nav" href="/"><img src="/assets-header-footer/logo-kemenkes.png" width="150" height="50" alt="Back to homepage"></a>
 
     <nav class="menu">
         <ul class="menu-items">
@@ -68,7 +68,7 @@
     <nav class="nav-logo-mobile">
         <a class="logo" href="/"><img src="/assets-header-footer/logo-avl.svg" width="150" height="50"
                 alt="Logo Antoni van Leeuwenhoek Ziekenhuis"></a>
-        <a class="logo" href="/"><img src="/assets-header-footer/logo-kemenkes.avif" width="150" height="50"
+        <a class="logo" href="/"><img src="/assets-header-footer/logo-kemenkes.png" width="50" height="50"
                 alt="Logo Antoni van Leeuwenhoek Ziekenhuis"></a>
     </nav>
 
