--- a/views/partials/head.liquid
+++ b/views/partials/head.liquid
@@ -18,7 +18,7 @@
     <a class="logo-nav" href="/"><img src="/assets-header-footer/logo-avl.svg" width="150" height="50" alt="Back to homepage"></a>
     <a class="logo-nav" href="/"><img src="/assets-header-footer/logo-kemenkes.png" width="150" height="50" alt="Back to homepage"></a>
 
-    <nav class="menu">
+    <nav class="menu" height="50" width="100%">
         <ul class="menu-items">
             <li class="menu-item">
                 <a href="/">
