Arrow icon in webinar card with en height gegeven #46

--- a/views/partials/webinar-card.liquid
+++ b/views/partials/webinar-card.liquid
@@ -60,7 +60,7 @@
                 {{ speaker.avl_speakers_id.fullname }}
                 {% endfor %}
             </p>
-            <a href="/webinars/{{ webinar.slug }}">View webinar<img src="/assets-webinars/icon-arrow-right.svg"
+            <a href="/webinars/{{ webinar.slug }}">View webinar<img src="/assets-webinars/icon-arrow-right.svg" width="25" height="25"
                     alt=""></a>
         </section>
     </li>
