--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -58,6 +58,13 @@
                 display: flex;
                 width: 25%;
                 height: 50px;
+                justify-content: center;
+
+                @media screen and (min-width: 1020px) {
+                     width: unset;
+                     height: unset;
+                     justify-content: unset;
+                }
 
                 &:nth-of-type(4) {
                     display: none;
