--- a/public/styles/filter-animation.css
+++ b/public/styles/filter-animation.css
@@ -92,7 +92,7 @@ select:open option{
 }
 
 option:checked {
-    background-color: white;
+    background-color: var(--secondary-light);
     color: var(--primary-dark);
 }
 
