button class op alle pagina's toegevoegd #49

--- a/views/index.liquid
+++ b/views/index.liquid
@@ -16,7 +16,7 @@
 
         </div>
         
-        <a href="/about-us" class="green-button">More about Oncollaboration</a>
+        <a href="/about-us" class="button-animated"><span>More about Oncollaboration</span></a>
 
     </section>
 
@@ -93,7 +93,7 @@
                 One of the main benefits of webinars is accessibility. Participants can join from any location, making it easier for organizations to reach a broader audience. Webinars are also cost-effective, saving time and money for both hosts and attendees.
                 In addition, webinars often include interactive features like Q&A sessions, polls, and chat functions, which encourage active participation and enhance the learning experience.
             </p>
-            <a href="/webinars" class="green-button">See all webinars</a>
+            <a href="/webinars" class="button-animated"><span>See all webinars</span></a>
         </section>
 
         <section class="home-contourings">
@@ -103,7 +103,7 @@
                 Precise contouring ensures that the radiation dose is delivered exactly where it's needed, reducing side effects and improving treatment outcomes. It requires teamwork between radiation oncologists, radiologists, and medical physicists.
                 Thanks to advanced imaging and software, contouring has become more accurate, helping patients receive safer and more effective cancer treatment.
             </p>
-            <a href="/contourings" class="green-button">See all contourings</a>
+            <a href="/contourings" class="button-animated"><span>See all contourings</span></a>
         </section>
     </div>
 
