--- a/views/speakers.liquid
+++ b/views/speakers.liquid
@@ -29,7 +29,7 @@
                         <option value="bookmarked-speakers">Bookmarked speakers</option>
                     </select>
                 </label>
-                <button type="submit" class="speakers-submit button-green">Filter speakers</button>
+                <button type="submit" class="speakers-submit button-animated"><span>Filter speakers</span></button>
             </form>
         </section>
 
