--- a/views/webinars-detail.liquid
+++ b/views/webinars-detail.liquid
@@ -43,7 +43,7 @@
             <section class="web-detail-q-en-a">
                     <form action="/webinars/{{ webinar.slug }}/{{ webinar.id }}" method="post" data-enhanced="form-{{ webinar.id }}">
                         <input type="text" name="comment" placeholder="Ask your question here..." />
-                        <button type="submit" class="button-green">Send</button>
+                        <button type="submit" class="button-animated"><span>Send</span></button>
                     </form>
             </section>
 
