--- a/views/webinars.liquid
+++ b/views/webinars.liquid
@@ -36,7 +36,7 @@
             <option value="old-new" {% if selectedSort=="old-new" %}selected{% endif %}>Old to New</option>
         </select>
 
-        <button class="button-animated-amber" type="submit"><span>Filter webinars</span></button>
+        <button class="button-animated" type="submit"><span>Filter webinars</span></button>
     </form>
 </section>
 
