Styling CSS 404 pagina #80

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -10,3 +10,4 @@
 @import url("scroll-driven-cards.css");
 @import url("filter-animation.css");
 @import url("about-us.css");
+@import url("404.css");
