--- a/views/index.liquid
+++ b/views/index.liquid
@@ -6,18 +6,16 @@
         <h1>The platform where Radiotherapists connect and innovate</h1>
 
         <div class="home-about-position">
-
-            <p>Oncollaboration is a digital platform dedicated to fostering international collaboration and knowledge exchange between radiation oncology professionals in the Netherlands and Indonesia. The platform was established with the aim of building bridges between medical experts, researchers, and healthcare professionals in both countries, working together to improve the quality of cancer care.</p>
+            <p>
+                Oncollaboration is a digital platform dedicated to fostering international collaboration and knowledge exchange between radiation oncology professionals in the Netherlands and Indonesia. The platform was established with the aim of building bridges between medical experts, researchers, and healthcare professionals in both countries, working together to improve the quality of cancer care. <br>
+                <a href="/about-us" class="button-animated"><span>More about Oncollaboration</span></a>
+            </p>
             
             <picture class="home-about-picture">
                 <source srcset="assets-home/avl-team.avif" type="image/avif">
                 <img src="assets-home/avl-team.jpeg" alt="5 doctors talking to each other" loading="eager" width="360px">
             </picture>
-
         </div>
-        
-        <a href="/about-us" class="button-animated"><span>More about Oncollaboration</span></a>
-
     </section>
 
     <section class="home-doctors">
@@ -32,7 +30,6 @@
             </p>
     
             <div class="home-team">
-                
                 <div class="home-team-card">
                     <picture>
                         <source srcset="" type="">
@@ -59,7 +56,6 @@
                     <p><strong>Judie van Driesen</strong></p>
                     <p>Radiation oncologist</p>
                 </div>
-
             </div>
         </div>   
     </section>
@@ -91,9 +87,9 @@
             <p>
                 Webinars have become an essential tool for learning, communication, and collaboration. They allow people from around the world to connect in real-time, share knowledge, and engage with experts—without the need for travel.
                 One of the main benefits of webinars is accessibility. Participants can join from any location, making it easier for organizations to reach a broader audience. Webinars are also cost-effective, saving time and money for both hosts and attendees.
-                In addition, webinars often include interactive features like Q&A sessions, polls, and chat functions, which encourage active participation and enhance the learning experience.
+                In addition, webinars often include interactive features like Q&A sessions, polls, and chat functions, which encourage active participation and enhance the learning experience. <br>
+                <a href="/webinars" class="button-animated"><span>See all webinars</span></a>
             </p>
-            <a href="/webinars" class="button-animated"><span>See all webinars</span></a>
         </section>
 
         <section class="home-contourings">
@@ -101,9 +97,9 @@
             <p>
                 Contouring is a crucial step in radiation therapy planning. It involves outlining the tumor and surrounding healthy tissues on medical images, such as CT or MRI scans. This helps doctors target the cancer accurately while protecting nearby organs.
                 Precise contouring ensures that the radiation dose is delivered exactly where it's needed, reducing side effects and improving treatment outcomes. It requires teamwork between radiation oncologists, radiologists, and medical physicists.
-                Thanks to advanced imaging and software, contouring has become more accurate, helping patients receive safer and more effective cancer treatment.
+                Thanks to advanced imaging and software, contouring has become more accurate, helping patients receive safer and more effective cancer treatment. <br>
+                <a href="/contourings" class="button-animated"><span>See all contourings</span></a>
             </p>
-            <a href="/contourings" class="button-animated"><span>See all contourings</span></a>
         </section>
     </div>
 
