--- a/views/partials/head.liquid
+++ b/views/partials/head.liquid
@@ -56,6 +56,14 @@
                 </a>
             </li>
             <li>
+                <a href="/about-us">
+                    <svg width="24" height="24" viewBox="0 0 16 21" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M14 0C15.0833 0 16 0.902344 16 1.96875V21L8 16.4062L0 21V1.96875C0 0.902344 0.875 0 2 0H14ZM14 17.5957V2.21484C14 2.0918 13.875 1.96875 13.75 1.96875H2.25C2.08333 1.96875 2 2.0918 2 2.21484V17.5957L8 14.1504L14 17.5957Z">
+                    </svg>About us
+                </a>
+            </li>
+            <li>
                 <a class="profile-link" href="/profile">
                         <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#fff">
                             <path
