--- a/views/partials/head.liquid
+++ b/views/partials/head.liquid
@@ -15,6 +15,8 @@
 
 <body>
 
+<a class="skiplink" href="#content">Skip to content</a>
+
 <header class="main-header">
 
     <a class="logo-nav" href="/"><img src="/assets-amber/logo-avl.svg" width="150" height="50" alt="Back to homepage"></a>
