ID's toegevoegd aan content #47

--- a/views/index.liquid
+++ b/views/index.liquid
@@ -1,6 +1,6 @@
 {% render "partials/head.liquid" %}
 
-<div class="home-main">
+<div class="home-main" id="content">
 
     <section class="home-about">
         <h1>The platform where Radiotherapists connect and innovate</h1>
