--- a/views/speakers.liquid
+++ b/views/speakers.liquid
@@ -1,7 +1,7 @@
 {% render "partials/head.liquid" %}
     {% comment %} {% include "partials/header.liquid" %} {% endcomment %}
 
-    <main class="main-speakers components-alignment-vertical">
+    <main class="main-speakers components-alignment-vertical" id="content">
         <section class="speakers-introduction">
             <div class="speakers-section-title">
                 <ul class="breadcrumbs-speakers components-alignment-horizontal">
