--- a/views/webinars.liquid
+++ b/views/webinars.liquid
@@ -1,6 +1,6 @@
 {% render "partials/head.liquid" %}
 
-<section class="hero-webinars">
+<section class="hero-webinars" id="content">
 
     <ul class="breadcrumb-webinars">
         <li><a href="/">Home &rsaquo;</a></li>
