--- a/views/about-us.liquid
+++ b/views/about-us.liquid
@@ -6,7 +6,7 @@ section ertussen worden weergeven. {% endcomment %}
 {%- assign bottom_item = aboutUsContent | where: "key", "about-us-bottom" | first -%}
 
 {% comment %} About us top content uit API {% endcomment %}
-<section>
+<section id="content">
     <h1>{{ top_item.heading }}</h1>
     <div class="about-us-intro-section">
         <p>{{ top_item.text }}</p>
