--- a/views/webinars-detail.liquid
+++ b/views/webinars-detail.liquid
@@ -1,6 +1,6 @@
 {% render "partials/head.liquid" %}
 
-<section class="web-detail-main">
+<section class="web-detail-main" id="content">
 {% for webinar in webinars %}
 
         <h1>{{ webinar.title }}</h1>
