Id toegevoegd aan speaker detail #47

--- a/views/speakers-detail.liquid
+++ b/views/speakers-detail.liquid
@@ -3,7 +3,7 @@
     {% comment %} {% include "partials/header.liquid" %} {% endcomment %}
 
     {% for speaker in speakers %}
-        <main class="speaker-main components-alignment-vertical">
+        <main class="speaker-main components-alignment-vertical" id="content">
             <section class="speaker-introduction components-alignment-vertical">
                 <ul class="breadcrumbs-speakers-detail components-alignment-horizontal">
                     <li><a href="/">Home &rsaquo;</a></li>
