Footer linkjes geüpdate #78

--- a/views/partials/foot.liquid
+++ b/views/partials/foot.liquid
@@ -16,9 +16,11 @@
         <section class="navigation-footer">
             <h6>Navigation</h6>
             <ul>
+                <li><a href="/">Home</a></li>
                 <li><a href="/webinars">Webinars</a></li>
                 <li><a href="/contourings">Contourings</a></li>
                 <li><a href="/speakers">Speakers</a></li>
+                <li><a href="/about-us">About us</a></li>
                 <li><a href="/profile">My profile</a></li>
             </ul>
         </section>
@@ -27,7 +29,7 @@
             <h6>Contact information</h6>
             <ul>
                 <li><img src="/assets-header-footer/icon-map.svg" width="18" height="18" alt="">Indonesia & The Netherlands</li>
-                <li><a href="tel:020 512 9111"><img src="/assets-header-footer/icon-phone.svg" width="18" height="18" alt="">AVL: 020 512 9111 </a>
+                <li><a href="tel:0205129111"><img src="/assets-header-footer/icon-phone.svg" width="18" height="18" alt="">AVL: 020 512 9111 </a>
                 </li>
                 <li><a href="tel:1500-567"><img src="/assets-header-footer/icon-phone.svg" width="18" height="18" alt="">Kemenkes: 1500-567</a></li>
             </ul>
