Profile link rename #78

--- a/views/partials/foot.liquid
+++ b/views/partials/foot.liquid
@@ -21,7 +21,7 @@
                 <li><a href="/contourings">Contourings</a></li>
                 <li><a href="/speakers">Speakers</a></li>
                 <li><a href="/about-us">About us</a></li>
-                <li><a href="/profile">My profile</a></li>
+                <li><a href="/profile">Profile</a></li>
             </ul>
         </section>
 
