--- a/public/styles/404.css
+++ b/public/styles/404.css
@@ -27,32 +27,36 @@
         flex-direction: row;
         line-height: 100%;
         flex-wrap: wrap;
-        gap: 1em 0;
         justify-content: center;
 
-        li {
-            padding: 0em 1em;
-            list-style-type: none;
+        & a:nth-of-type(1) {
+            border-right: 1px solid #c8c8c8;
+            padding: 0 1em 0 0;
+        }
 
-            &:nth-of-type(1) {
-                border-right: 1px solid #c8c8c8;
-            }
+        & a:nth-of-type(2) {
+            border-right: 1px solid#c8c8c8;
+             padding: 0 1em 0 1em;
 
-            &:nth-of-type(2) {
-                border-right: 1px solid#c8c8c8;
-            }
+        }
 
-            &:nth-of-type(3) {
-                border-right: 1px solid #c8c8c8;
-            }
+        & a:nth-of-type(3) {
+            border-right: 1px solid #c8c8c8;
+           padding: 0 1em 0 1em;
+        }
 
-            &:nth-of-type(4) {
-                border-right: 1px solid #c8c8c8;
-            }
+        & a:nth-of-type(4) {
+            border-right: 1px solid #c8c8c8;
+            padding: 0 1em 0 1em;
+        }
 
-            &:nth-of-type(5) {
-                border-right: 1px solid #c8c8c8;
-            }
+        & a:nth-of-type(5) {
+            border-right: 1px solid #c8c8c8;
+            padding: 0 1em 0 1em;
+        }
+
+        & a:nth-of-type(6) {
+            padding: 0 0 0 1em;
         }
     }
 }
