--- a/views/404.liquid
+++ b/views/404.liquid
@@ -1,19 +1,19 @@
 {% render "partials/head.liquid" %}
 
 <section class="error">
-    <img src="/assets-404/error-icon.svg" alt="" height="100" width="100px">
+    <img src="/assets-404/error-icon.svg" alt="" height="100" width="100">
 
     <h1>Oops 404 error</h1>
     <p>Something went wrong. The page you are trying to reach is not available. Please check our other pages.</p>
 
-    <ul class="navigatie-error">
-        <li><a href="/">Home</a></li>
-        <li><a href="/webinars">Webinars</a></li>
-        <li><a href="/contourings">Contourings</a></li>
-        <li><a href="/speakers">Speakers</a></li>
-        <li><a href="/about-us">About us</a></li>
-        <li><a href="/profile">Profile</a></li>
-    </ul>
+    <nav class="navigatie-error">
+        <a href="/">Home</a>
+        <a href="/webinars">Webinars</a>
+        <a href="/contourings">Contourings</a>
+        <a href="/speakers">Speakers</a>
+        <a href="/about-us">About us</a>
+        <a href="/profile">Profile</a>
+    </nav>
 </section>
 
 {% render "partials/foot.liquid" %}
