id toegevoegd voor skiplink 404 pagina #83

--- a/views/404.liquid
+++ b/views/404.liquid
@@ -1,6 +1,6 @@
 {% render "partials/head.liquid" %}
 
-<section class="error">
+<section class="error" id="content">
     <img src="/assets-404/error-icon.svg" alt="" height="100" width="100">
 
     <h1>Oops 404 error</h1>
