--- a/public/styles/webinars.css
+++ b/public/styles/webinars.css
@@ -104,6 +104,15 @@
         background-color: rgb(211, 211, 211);
     }
 
+    .fallback-category {
+        width: 100%;
+        line-height: 2em;
+
+        @media screen and (min-width: 720px) {
+           width: 25em;
+        }
+    }
+
     .webinar-cards {
         display: flex;
         flex-direction: column;
@@ -148,10 +157,22 @@
                         align-items: center;
                         gap: .3em;
                         cursor: pointer;
+                        transition: .2s ease-in-out;
+                        filter: drop-shadow(0px 4px 8.4px #00000050);
 
-                        img {
-                            width: 1.2em;
-                            height: 1.2em;
+                        &:hover {
+                            transition: .2s ease-in-out;
+                            background-color: var(--primary-dark);
+                            color: var(--secondary-text);
+                        }
+
+                        &:hover path {
+                            fill: white;
+                        }
+
+                        &:hover
+                        circle {
+                            stroke: white;
                         }
                     }
                 }
@@ -194,6 +215,23 @@
                     display: flex;
                     align-items: center;
                     gap: .5em;
+                     width: max-content;
+                     transition: .2s ease-in-out;
+
+                     svg,
+                     path {
+                         transition: .2s ease-in-out;
+                     }
+
+                     &:hover {
+                         path {
+                             fill: var(--primary-highlight);
+                         }
+
+                         svg {
+                             translate: 50% 0%;
+                         }
+                     }
                 }
             }
         }
@@ -210,11 +248,14 @@
     content: 'Loading..';
 }
 
-
-.bookmark-webinar-form.loading button img {
+.bookmark-webinar-form.loading button::after {
     content: url('/assets-webinars/icon-loading.svg');
     font-size: 14px;
     animation: rotation 1s linear infinite;
+}
+
+.bookmark-webinar-form.loading svg {
+    display: none;
 }
 
 @keyframes rotation {
