#47 select en label gekoppeld

--- a/views/speakers.liquid
+++ b/views/speakers.liquid
@@ -22,7 +22,7 @@
 
             <!-- Filter formulier -->
             <form class="speakers-filter" method="get" action="/speakers">
-                <label for="speakers-filter">
+                <label for="filter">
                     View all speakers or use the filter to view your bookmarked speakers.
                 </label>
                 
