#46 lazy/eager loading

--- a/views/partials/speaker-card.liquid
+++ b/views/partials/speaker-card.liquid
@@ -34,7 +34,7 @@
                     "
                 />     
                 <!-- fallback image met goed ondersteund format (jpg) -->           
-                <img src="https://fdnd-agency.directus.app/assets/{{ speaker.profile_picture }}?format=jpg" alt="" width="200" height="200" style="object-fit:cover;">
+                <img src="https://fdnd-agency.directus.app/assets/{{ speaker.profile_picture }}?format=jpg" alt="" width="200" height="200" loading="lazy" style="object-fit:cover;">
             </picture>
         </div>
         <div class="speaker-card-name-entitle">
