--- a/views/speakers-detail.liquid
+++ b/views/speakers-detail.liquid
@@ -51,7 +51,7 @@
                                 "
                             />     
                             <!-- fallback image met goed ondersteund format (jpg) -->           
-                            <img src="https://fdnd-agency.directus.app/assets/{{ speaker.profile_picture }}?format=jpg" alt="" width="200" height="200" loading="lazy" style="object-fit:cover;">
+                            <img src="https://fdnd-agency.directus.app/assets/{{ speaker.profile_picture }}?format=jpg" alt="" width="200" height="200" loading="eager" style="object-fit:cover;">
                         </picture>
                     </div>
 
