--- a/views/partials/head.liquid
+++ b/views/partials/head.liquid
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles/styles.css">
     <script defer src="script-mobile-menu.js"></script>
+    <script defer src="script-index.js"></script>
+
 
 </head>
 
