--- a/public/styles/about-us.css
+++ b/public/styles/about-us.css
@@ -1,47 +1,68 @@
+/* h1 */
 .about-us-main-title {
     margin: 1.5rem 2rem;
-
-    @media screen and (min-width: 720px) {}
-
-    @media screen and (min-width: 1020px) {}
 }
 
+/* div */
 .about-us-intro-section {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     margin-bottom: 2rem;
 
+    @media screen and (min-width: 720px) {
+        justify-content: flex-start;
+    }
+
+    @media screen and (min-width: 1020px) {
+        justify-content: space-between;
+    }
+
+    /* p */
     .about-us-intro-p {
         line-height: 1.7rem;
         width: 700px;
         margin: 1rem 2rem;
+
+        @media screen and (min-width: 720px) {
+            width: 700px;
+            max-width: 800px;
+        }
     }
 
+    /* picture --> img */
     .about-us-intro-picture {
-        margin: 1rem;
+        margin: 1rem 2rem;
         border-radius: 7px;
-        display: flex;
-        justify-content: center;
+
+        @media screen and (min-width: 1020px) {
+            width: 500px;
+            height: auto;
+            margin: 0rem 4rem;
+        }
+
     }
 }
 
+/* section */
 .about-us-team-section {
     background-color: var(--secondary-light);
     padding: 2rem;
     text-align: center;
 
+    /* h2 */
     .about-us-team-title {
         margin-bottom: 1.5rem;
     }
 
+    /* div */
     .about-us-team-card-grid {
         display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr 1fr;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
         justify-items: center;
         gap: 1rem;
 
+        /* div */
         .about-us-team-card {
             display: flex;
             gap: 0.5rem;
@@ -58,6 +79,7 @@
             align-items: center;
             justify-content: space-evenly;
 
+            /* h3 */
             .about-us-team-card-title {
                 font-size: 1.2rem;
                 font-weight: bold;
@@ -68,11 +90,13 @@
                 text-overflow: ellipsis;
             }
 
+            /* p */
             .about-us-team-role {
                 text-align: left;
                 color: var(--primary-highlight);
             }
 
+            /* picture --> img */
             .about-us-team-photo {
                 width: 150px;
                 height: 150px;
@@ -80,6 +104,7 @@
                 margin-bottom: 0;
             }
 
+            /* a */
             a {
                 text-align: left;
                 margin: 1rem;
@@ -89,23 +114,42 @@
     }
 }
 
+/* h2 */
 .about-us-partner-title {
     margin: 1.5rem 2rem;
 }
 
+/* div */
 .about-us-partner-section {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     margin-bottom: 2rem;
 
+    @media screen and (min-width: 720px) {
+        justify-content: flex-start;
+    }
+
+    @media screen and (min-width: 1020px) {
+        flex-wrap: nowrap;
+        margin-right: 2rem;
+    }
+
+    /* p */
     .about-us-partner-p {
         line-height: 1.7rem;
         width: 700px;
         margin: 1rem 2rem;
+
+        @media screen and (min-width: 720px) {
+            width: 700px;
+            max-width: 800px;
+            margin-bottom: 2rem;
+        }
     }
 }
 
+/* scroll animatie */
 @keyframes scrollLeft {
     0% {
         transform: translateX(0);
@@ -116,6 +160,7 @@
     }
 }
 
+/* div */
 .logo-marquee {
     overflow: hidden;
     background-color: var(--primary-highlight);
@@ -124,6 +169,16 @@
     padding: 1.5rem 0;
     width: 80%;
 
+    @media screen and (min-width: 720px) {
+        margin: auto;
+        width: 70%;
+    }
+
+    @media screen and (min-width: 1020px) {
+        width: 40%;
+    }
+
+    /* div */
     .logo-track {
         display: flex;
         gap: 2rem;
@@ -131,6 +186,7 @@
         width: max-content;
     }
 
+    /* img */
     .logo-track img {
         height: 100px;
         width: 150px;
