#81 dynamic title in head

--- a/views/about-us.liquid
+++ b/views/about-us.liquid
@@ -1,4 +1,5 @@
-{% render "partials/head.liquid" %}
+{% assign pageTitle = "About Us | Oncollaboration" %}
+{% include "partials/head.liquid" %}
 
 {% comment %} Dit zorgt ervoor dat de key's uit de API worden opgesplitst ipv onder elkaar getoond. Hierdoor kan de team
 section ertussen worden weergeven. {% endcomment %}
