--- a/views/contourings.liquid
+++ b/views/contourings.liquid
@@ -1,4 +1,5 @@
-{% render "partials/head.liquid" %}
+{% assign pageTitle = "Contourings | Oncollaboration" %}
+{% include "partials/head.liquid" %}
 
     <h1>Contourings</h1>
 
