--- a/views/speakers.liquid
+++ b/views/speakers.liquid
@@ -1,4 +1,5 @@
-{% render "partials/head.liquid" %}
+{% assign pageTitle = "Speakers | Oncollaboration" %}
+{% include "partials/head.liquid" %}
     {% comment %} {% include "partials/header.liquid" %} {% endcomment %}
 
     <main class="main-speakers components-alignment-vertical">
