--- a/views/webinars-detail.liquid
+++ b/views/webinars-detail.liquid
@@ -1,4 +1,5 @@
-{% render "partials/head.liquid" %}
+{% assign pageTitle = "Webinars | Oncollaboration" %}
+{% include "partials/head.liquid" %}
 
 <section class="web-detail-main">
 {% for webinar in webinars %}
