--- a/views/profile.liquid
+++ b/views/profile.liquid
@@ -1,4 +1,5 @@
-{% render "partials/head.liquid" %}
+{% assign pageTitle = "Profile | Oncollaboration" %}
+{% include "partials/head.liquid" %}
 
     <h1>Profile</h1>
 
