display block op buttons #81

--- a/views/index.liquid
+++ b/views/index.liquid
@@ -7,8 +7,8 @@
             <h1> {{ intro.heading }} </h1>
 
             <div class="home-about-position">
-                <p> {{ intro.text }} <br> <br>
-                    <a href=" {{ intro.read_more_link }} " class="button-animated"><span> {{ intro.read_more_text }} </span></a>
+                <p> {{ intro.text }} 
+                    <a href=" {{ intro.read_more_link }} " class="button-animated button-home"><span> {{ intro.read_more_text }} </span></a>
                 </p>
                 
                 <picture class="home-about-picture">
@@ -90,8 +90,8 @@
             <section class="home-webinars">
                 <h2> {{ webinars.heading }} </h2>
                 <p>
-                    {{ webinars.text }} <br> <br>
-                    <a href=" {{ webinars.read_more_link }}" class="button-animated"><span> {{ webinars.read_more_text }} </span></a>
+                    {{ webinars.text }} 
+                    <a href=" {{ webinars.read_more_link }}" class="button-animated button-home"><span> {{ webinars.read_more_text }} </span></a>
                 </p>
             </section>
         {% endif %}
@@ -102,8 +102,8 @@
             <section class="home-contourings">
                 <h2> {{ contourings.heading }} </h2>
                 <p>
-                    {{ contourings.text }} <br> <br>
-                    <a href=" {{ contourings.read_more_link }} " class="button-animated"><span> {{ contourings.read_more_text }} </span></a>
+                    {{ contourings.text }}
+                    <a href=" {{ contourings.read_more_link }} " class="button-animated button-home"><span> {{ contourings.read_more_text }} </span></a>
                 </p>
             </section>
         {% endif %}
