class h1 about-us terug gedraaid #81

--- a/views/about-us.liquid
+++ b/views/about-us.liquid
@@ -7,7 +7,7 @@ section ertussen worden weergeven. {% endcomment %}
 
 {% comment %} About us top content uit API {% endcomment %}
 <section>
-    <h1 class="about-us-h1">{{ top_item.heading }}</h1>
+    <h1>{{ top_item.heading }}</h1>
     <div class="about-us-intro-section">
         <p>{{ top_item.text }}</p>
         <picture class="about-us-intro-picture">
